# feathergui

./: .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  README.md  REUSE.toml  __env.sc  backend.h  base.mk  build-deps.ps1  build.zig  compile_to_master.bat  default.nix  deny.toml  feather-ui.sln  feather.sln  feather.t  feather_proto.t  feather_proto_test.hpp  feather_proto_test.t  feathergui.mk  feathergui.sln  fgExample-c.mk  flake.nix  layout.xml  lib.nix  makefile  nuklear.t  nuklear_test.t  pack.bat  prebuild.t  prebuild.vcxproj  prebuild.vcxproj.filters  shell.nix  terra.nix  vcpkg.json.bak
.github/: dependabot.yml
backendtest/: CMakeLists.txt  backendtest.c  backendtest.cpp  resource.h  resource.hpp
cpptest/: CMakeLists.txt  Makefile  cpptest.cpp  cpptest.vcxproj  cpptest.vcxproj.filters  default.nix  main.cpp  resource.h
doc/: changelog.txt  feathergui-license.txt
docs/: index.html  index.xml  sitemap.xml
examples/basic-alc/: Cargo.toml  layout.alc  main.rs
examples/basic-rs/: Cargo.toml  main.rs
examples/calculator-alc/: Cargo.toml  OUTPUT.alc  build.rs  layout.alc
examples/calculator-alc/src/: calculator.udl  main.rs
examples/calculator-rs/: Cargo.toml  build.rs  calculator-cs.sln  main.rs
examples/calculator-rs/calculator-cs/: Calculator.cs  Program.cs  calc.cs  calculator-cs.csproj
examples/calculator-rs/src/: bin.rs  calc.cs  calculator.toml  calculator.udl  lib.rs  main.rs
examples/graph-rs/: Cargo.toml  main.rs
examples/grid-rs/: Cargo.toml  main.rs
examples/list-rs/: Cargo.toml  main.rs
examples/paragraph-rs/: Cargo.toml  main.rs
examples/textbox-rs/: Cargo.toml  main.rs
examples/timer/: Cargo.toml  main.rs
feather/: abstract-codegen.t  array.t  atof.sc  backend.cpp  backend.sc  backend.t  bind.t  binding.t  c-headers.t  calc.cpp  calc.t  circle-shader.sc  circle-test.sc  closure.t  color.t  core.t  debug.t  default-log.sc  document.cpp  dynarray.t  element.t  enum.t  enumset.t  event.cpp  expression.t  feather.cpp  feather.vcxproj  feather.vcxproj.filters  flags.t  flex.cpp  formatting.t  glsl.t  gltf-test.sc  gltf.sc  hash.t  imageio.sc  init.t  json-old.sc  json-test.sc  json.sc  (+32 more)
feather-macro/: Cargo.toml
feather-macro/src/: lib.rs
feather-ui/: Cargo.toml  b-tree.alc  feather.alc  rrb-vector.alc
feather-ui/examples/: basic-rs.rs  graph-rs.rs  grid-rs.rs  list-rs.rs
feather-ui/examples/basic-alc/: Cargo.toml  basic.rs  layout.alc
feather-ui/examples/calculator-alc/: build.rs  layout.alc
feather-ui/examples/calculator-rs/: calculator-cs.sln
feather-ui/examples/calculator-rs/calculator-cs/: calc.cs
feather-ui/examples/calculator-rs/src/: bin.rs  calculator.toml
feather-ui/src/: color.rs  draw.rs  editor.rs  graphics.rs  input.rs  lib.rs  lua.rs  persist.rs  propbag.rs  rtree.rs  text.rs  util.rs  window.rs
feather-ui/src/component/: arc.rs  button.rs  domain_line.rs  domain_point.rs  draggable.rs  flexbox.rs  gridbox.rs  line.rs  listbox.rs  mod.rs  mouse_area.rs  paragraph.rs  region.rs  round_rect.rs  scroll_area.rs  shape.rs  text.rs  textbox.rs  window.rs
feather-ui/src/layout/: base.rs  basic.rs  center.rs  domain_write.rs  empty.rs  fixed.rs  flex.rs  grid.rs  leaf.rs  list.rs  mod.rs  prop.rs  root.rs  simple.rs  text.rs
feather-ui/src/outline/: arc.rs  button.rs  circle.rs  domain_line.rs  domain_point.rs  draggable.rs  flexbox.rs  gridbox.rs  listbox.rs  mod.rs  mouse_area.rs  paragraph.rs  region.rs  round_rect.rs  shader_standard.rs  shape.rs  sized_region.rs  text.rs  window.rs
feather-ui/src/render/: atlas.rs  chain.rs  compositor.rs  line.rs  mod.rs  shape.rs  standard.rs  text.rs  textbox.rs
feather-ui/src/render/domain/: line.rs  mod.rs
feather-ui/src/shaders/: Arc.frag.glsl  Arc.wgsl  Circle.frag.glsl  Circle.wgsl  Image.frag.glsl  Image.vert.glsl  Line.frag.glsl  Line.frag.wgsl  Line.vert.glsl  Line.vert.wgsl  RoundRect.frag.glsl  RoundRect.wgsl  Triangle.frag.glsl  Triangle.wgsl  compositor.wgsl  feather.wgsl  mod.rs  shape.wgsl  standard.vert.glsl  standard.wgsl
feathergui/: ConvertUTF.c  XML.cpp  cXML.cpp  ccheck.c  feathercpp.h  feathergui.c  feathergui.cpp  feathergui.rc  feathergui.vcxproj  feathergui.vcxproj.filters  fgBackend.cpp  fgBox.cpp  fgButton.c  fgButton.cpp  fgCheckbox.cpp  fgChild.c  fgChild.cpp  fgCombobox.cpp  fgContainer.c  fgControl.cpp  fgCurve.cpp  fgDebug.cpp  fgDropdown.cpp  fgElement.cpp  fgGrid.c  fgGrid.cpp  fgImplementation.c  fgImplementation.cpp  fgLayout.c  fgLayout.cpp  fgLayoutFunctions.cpp  fgList.cpp  fgMenu.c  fgMenu.cpp  fgMonitor.cpp  fgProgressbar.cpp  fgRadioButton.cpp  fgRenderable.c  fgResource.c  fgResource.cpp  (+28 more)
fgDirect2D/: Alloc.h  Arc.cpp  Arc.h  Arc.hlsl  Backend.cpp  Backend.h  BackendD2D.cpp  BackendD2D.h  Circle.cpp  Circle.h  Circle.hlsl  CompactArray.h  Context.cpp  Context.h  Direct2D.cpp  Direct2D.h  Direct2D_Arc.h  Direct2D_Circle.h  Direct2D_Modulation.h  Direct2D_RoundRect.h  Direct2D_Triangle.h  Display.cpp  Display.h  EffectBase.cpp  EffectBase.h  ImageEffectBase.cpp  ImageEffectBase.h  Modulation.cpp  Modulation.h  Modulation.hlsl  RoundRect.cpp  RoundRect.glsl  RoundRect.h  RoundRect.hlsl  Triangle.cpp  Triangle.h  Triangle.hlsl  Window.cpp  Window.h  compiler.h  (+31 more)
fgGLFW/: CMakeLists.txt  ProviderGLFW.cpp  ProviderGLFW.hpp  Window.cpp  Window.hpp  platform.hpp
fgLayoutEditor/: EditorBase.cpp  EditorBase.h  EditorVersion.h  LayoutTab.cpp  main.c  (+11 more)
fgOpenGL/: Arc.fs.glsl  Asset.h  Backend.cpp  Backend.h  BackendGL.cpp  BackendGL.h  BackendGL.hpp  Buffer.h  Buffer.hpp  CMakeLists.txt  Circle.fs.glsl  Context.cpp  Context.h  Context.hpp  EnumMapping.h  EnumMapping.hpp  Font.cpp  Font.h  Format.cpp  Format.h  Format.hpp  FrameBuffer.cpp  FrameBuffer.h  FrameBuffer.hpp  GLError.cpp  GLError.h  GLError.hpp  GLFormat.cpp  GLFormat.h  GLRef.h  Image.fs.glsl  Image.vs.glsl  Layer.cpp  Layer.h  Line.fs.glsl  Line.vs.glsl  Makefile  PipelineState.cpp  PipelineState.h  PipelineState.hpp  (+44 more)
fgOpenGL/glad/: gl.h  glad.h
fgOpenGLDesktopBridge/: Bridge.cpp  Bridge.hpp  CMakeLists.txt
(+336 files in other folders)
