# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 Fundament Software SPC <https://fundament.software>

[workspace]
members = [
  "feather-ui",
  "feather-ui/examples/basic-alc",
  "feather-ui/examples/calculator-rs",
  # "feather-ui/examples/calculator-alc", # This breaks cargo for some reason
  "feather-macro",
]
resolver = "2"
default-members = ["feather-ui", "feather-macro"]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.87.0"
license = "Apache-2.0"
homepage = "https://github.com/Fundament-Software/feathergui"
repository = "https://github.com/Fundament-Software/feathergui/"
readme = "README.md"

[workspace.dependencies]
im = "15.1"
wgpu = "25"
winit = "0.30"
eyre = "0.6"
ultraviolet = "0.10"
tracing-subscriber = { version = "0.3.18", features = ["time"] }
tracing = "0.1.40"
feather-ui = { path = "feather-ui" }
alicorn = "0.1.2"
feather-macro = { version = "0.2", path = "feather-macro" }
cosmic-text = { version = "0.14.2", git = "https://github.com/pop-os/cosmic-text", rev = "d15011fba547ae6bd2cbc7591991ff74424c6db7" } # TODO: change back to a proper release once fixes we need make it into stable

[workspace.lints]
