# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 Fundament Software SPC <https://fundament.software>

[package]
name = "feather-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Erik McClure <erikm@fundament.software>"]
description = """
Feather UI library
"""
homepage.workspace = true
repository = "https://github.com/Fundament-Software/feathergui/tree/main/feather-ui"
readme.workspace = true
keywords = ["ui", "interface", "graphics", "gpu"]
license.workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
im.workspace = true
wgpu.workspace = true
winit.workspace = true
eyre.workspace = true
color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
ultraviolet.workspace = true
dyn-clone = "1.0"
derive-where = "1.2.7"
mlua.workspace = true
glyphon.workspace = true
enum_variant_type = "0.3.1"
smallvec = { version = "1.13", features = ["union", "const_generics"] }
thiserror = "1.0"
once_cell = "1.20.3"
feather-macro = { version = "0.1", path = "../feather-macro" }
