# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 Fundament Software SPC <https://fundament.software>

[package]
name = "feather-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Erik McClure <erikm@fundament.software>"]
description = """
Feather UI library
"""
homepage.workspace = true
repository = "https://github.com/Fundament-Software/feathergui/tree/main/feather-ui"
readme.workspace = true
keywords = ["ui", "interface", "graphics", "gpu"]
license.workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
im.workspace = true
wgpu.workspace = true
winit.workspace = true
eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
ultraviolet.workspace = true
dyn-clone = "1.0"
derive-where = "1.2.7"
mlua.workspace = true
enum_variant_type = "0.3.1"
smallvec = { version = "1.13", features = ["union", "const_generics"] }
thiserror = "2.0"
feather-macro.workspace = true
derive_more = { version = "2.0.1", features = ["try_from"] }
wide = "0.7.32"
alloca = "0.4.0"
unicode-segmentation = "1.12.0"
arboard = { version = "3.5.0", features = ["wayland-data-control"] }
parking_lot = { version = "0.12.3", features = [
  "hardware-lock-elision",
  "arc_lock",
] }
static_assertions = "1.1.0"
windows-sys = { version = "0.59.0", features = [
  "Win32_UI_WindowsAndMessaging",
] }
bytemuck = "1.23.0"
cosmic-text.workspace = true
guillotiere = "0.6.2"

[lints.clippy]
too_many_arguments = { level = "allow" }
