[package]
name = "basic-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Erik McClure <erikm@fundament.software>"]
description = """
Basic feather window
"""
homepage.workspace = true
readme.workspace = true
license.workspace = true

[[bin]]
name = "basic-rs"
path = "main.rs"

[dependencies]
wgpu.workspace = true
winit.workspace = true
tokio.workspace = true
feather-ui.workspace = true
ultraviolet.workspace = true
