# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 Fundament Software SPC <https://fundament.software>

[package]
name = "basic-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Erik McClure <erikm@fundament.software>"]
description = """
Basic feather window
"""
homepage.workspace = true
readme.workspace = true
license.workspace = true

[[bin]]
name = "basic-rs"
path = "main.rs"

[dependencies]
feather-ui.workspace = true
feather-macro.workspace = true
