# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 Fundament Software SPC <https://fundament.software>

[package]
name = "calculator-alc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Erik McClure <erikm@fundament.software>"]
description = """
Basic calculator using Alicorn
"""
homepage.workspace = true
readme.workspace = true
license.workspace = true

[[bin]]
name = "calculator-alc"
path = "src/main.rs"

[dependencies]
wgpu.workspace = true
winit.workspace = true
feather-ui.workspace = true
ultraviolet.workspace = true
im.workspace = true
alicorn.workspace = true
mlua.workspace = true
uniffi = { version = "0.29", features = ["scaffolding-ffi-buffer-fns"] }
uniffi-alicorn = { version = "0.1.2", features = [
  "scaffolding-ffi-buffer-fns",
] }
thiserror = "2.0"

[build-dependencies]
# Add the "scaffolding-ffi-buffer-fns" feature to make sure things can build correctly
uniffi = { version = "0.29", features = [
  "build",
  "scaffolding-ffi-buffer-fns",
] }
uniffi-alicorn = { version = "0.1.2", features = [
  "build",
  "scaffolding-ffi-buffer-fns",
] }

[dev-dependencies]
uniffi-alicorn = { version = "0.1.2", features = ["bindgen-tests"] }
