# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 Fundament Software SPC <https://fundament.software>

[package]
name = "calculator-rs"
version.workspace = true
edition = "2021" # This is stuck on uniffi 0.27 which doesn't emit valid code under 2024
rust-version.workspace = true
authors = ["Erik McClure <erikm@fundament.software>"]
description = """
Simple calculator
"""
homepage.workspace = true
readme.workspace = true
license.workspace = true

[lib]
name = "calculator"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "calculator-rs"
path = "src/bin.rs"

[dependencies]
feather-ui.workspace = true
feather-macro.workspace = true
uniffi = "0.29.3"

[build-dependencies]
uniffi = { version = "0.29.3", features = ["build"] }
