# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 Fundament Software SPC <https://fundament.software>

[package]
name = "graph-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Erik McClure <erikm@fundament.software>"]
description = """
Simple graph editor
"""
homepage.workspace = true
readme.workspace = true
license.workspace = true

[[bin]]
name = "graph-rs"
path = "main.rs"

[dependencies]
feather-ui.workspace = true
feather-macro.workspace = true
